--- a/angular.json
+++ b/angular.json
@@ -75,13 +75,14 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "polyfills": [
               "zone.js",
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
+            "configPath": "jest.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
