--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^15.0.0",
     "@angular-devkit/build-angular": "^15.2.1",
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.4.0",
     "jasmine-core": "~4.5.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
