--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --verbose"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +31,7 @@
     "@types/jest": "^29.4.0",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.3",
     "jest-preset-angular": "^13.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
