--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --verbose"
+    "test": "ng test --verbose",
+    "start:mocks": "mocks-server"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "@angular-devkit/build-angular": "^15.2.1",
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
+    "@mocks-server/main": "^4.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.4.0",
     "jasmine-core": "~4.5.0",
